// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine runs RANDOM exactly once when condition is [ ] 1`] = `
[
  [
    [
      "STATIONARY Background",
      "STATIONARY Player",
      "STATIONARY RandomTile",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`engine runs RANDOM in groups properly (e.g. Mirror Isles) 1`] = `
[
  [
    [
      "STATIONARY Background",
      "STATIONARY HasReflection",
      "STATIONARY Player",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY MirrorDR",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
      "STATIONARY HasReflection",
      "STATIONARY Player",
    ],
  ],
  [
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
  ],
  [
    [
      "STATIONARY Background",
      "STATIONARY MirrorUR",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
      "STATIONARY Reflection",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
      "STATIONARY MirrorDL",
    ],
  ],
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
  ],
  [
    [
      "STATIONARY Background",
      "STATIONARY HasReflection",
      "STATIONARY Player",
    ],
    [
      "STATIONARY Background",
      "STATIONARY LOS",
    ],
    [
      "STATIONARY Background",
      "STATIONARY MirrorUL",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY HasReflection",
      "STATIONARY Player",
    ],
  ],
]
`;

exports[`engine runs exactly one rule when group is RANDOM 1`] = `
[
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY Two",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
  ],
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY Player",
    ],
    [
      "STATIONARY Background",
    ],
  ],
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`engine runs exactly one rule when group is RANDOM 2`] = `
[
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY Two",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
      "STATIONARY Three",
    ],
    [
      "STATIONARY Background",
    ],
  ],
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
  ],
  [
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
    [
      "STATIONARY Background",
    ],
  ],
]
`;
